--- a/address.html
+++ b/address.html
@@ -13,13 +13,14 @@
 </head>
 <body class="bg-gradient-to-br from-blue-50 to-white text-gray-800 min-h-screen p-4 sm:p-8">
 
+  <!-- Checkout Container -->
   <div id="checkoutContainer" class="max-w-6xl mx-auto bg-white rounded-3xl shadow-2xl overflow-hidden transition-all duration-500">
     <div class="grid grid-cols-1 md:grid-cols-2 gap-8 p-6 sm:p-12">
 
       <!-- Shipping Address -->
       <div>
         <h2 class="text-2xl font-bold mb-6 text-blue-700">Shipping Address</h2>
-        <form class="space-y-5">
+        <form id="checkoutForm" class="space-y-5">
           <input type="text" placeholder="Full Name" class="w-full px-4 py-2 rounded-xl border border-gray-300" />
           <input type="tel" placeholder="Mobile Number" class="w-full px-4 py-2 rounded-xl border border-gray-300" />
           <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
@@ -72,7 +73,7 @@
       </div>
     </div>
 
-    <!-- Button -->
+    <!-- Place Order Button -->
     <div class="text-center p-6 bg-blue-50">
       <button onclick="placeOrder()" class="bg-blue-600 text-white font-semibold px-10 py-3 rounded-full text-lg hover:bg-blue-700 transition-all">
         Place Order
@@ -89,12 +90,69 @@
     <p class="text-gray-600">Thank you for your order. We'll deliver it soon!</p>
   </div>
 
+  <!-- Loader -->
+  <div id="loader" class="hidden fixed inset-0 bg-white bg-opacity-70 z-50 flex items-center justify-center">
+    <svg class="animate-spin h-12 w-12 text-blue-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
+      <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
+      <path class="opacity-75" fill="currentColor"
+        d="M4 12a8 8 0 018-8v8z"></path>
+    </svg>
+  </div>
+
   <!-- JavaScript -->
   <script>
     function placeOrder() {
-      // Hide form and show message
-      document.getElementById('checkoutContainer').classList.add('hidden');
-      document.getElementById('successMessage').classList.remove('hidden');
+      const user = localStorage.getItem("loggedInUser");
+      if (!user) {
+        alert("⚠️ Please log in to place an order.");
+        window.location.href = "login.html";
+        return;
+      }
+
+      const cart = JSON.parse(localStorage.getItem("cartItems")) || [];
+      if (cart.length === 0) {
+        alert("🛒 Your cart is empty.");
+        return;
+      }
+
+      // Validate Shipping + Payment Fields
+      const inputs = document.querySelectorAll('form input, form textarea');
+      for (const input of inputs) {
+        if (!input.value.trim()) {
+          alert("❌ Please fill in all shipping and payment details.");
+          input.focus();
+          return;
+        }
+      }
+
+      // Show loader
+      document.getElementById("loader").classList.remove("hidden");
+
+      // Create order
+      const order = {
+        id: "ORD" + Date.now(),
+        date: new Date().toLocaleString(),
+        items: cart,
+        total: cart.reduce((sum, item) => sum + item.qty * item.price, 0)
+      };
+
+      const historyKey = `orderHistory-${user}`;
+      const existingOrders = JSON.parse(localStorage.getItem(historyKey)) || [];
+      existingOrders.push(order);
+      localStorage.setItem(historyKey, JSON.stringify(existingOrders));
+
+      localStorage.removeItem("cartItems");
+      if (typeof updateCartUI === "function") updateCartUI();
+
+      setTimeout(() => {
+        document.getElementById('checkoutContainer')?.classList.add('hidden');
+        document.getElementById('successMessage')?.classList.remove('hidden');
+        document.getElementById('loader').classList.add('hidden');
+
+        setTimeout(() => {
+          window.location.href = "my-order.html";
+        }, 2000);
+      }, 1500);
     }
   </script>
 
