--- a/cigarette-page.html
+++ b/cigarette-page.html
@@ -42,14 +42,14 @@
         <!-- Desktop Links -->
         <div class="hidden md:flex items-center space-x-6">
           <a href="Login.html" class="text-sm font-medium text-gray-700 hover:text-green-600">Login</a>
-          <button class="open-cart-btn flex items-center space-x-2 px-4 py-2 border border-gray-300 rounded-md bg-gray-100 hover:bg-gray-200">
-            <svg class="w-5 h-5 text-gray-600" fill="none" stroke="currentColor" stroke-width="2"
-                 viewBox="0 0 24 24">
-              <path stroke-linecap="round" stroke-linejoin="round"
-                    d="M3 3h2l.4 2M7 13h14l-1.35 6.7a1 1 0 01-.98.8H6.33a1 1 0 01-.98-.8L4 6H2" />
-            </svg>
-            <span class="text-sm font-medium text-gray-800">My Cart</span>
-          </button>
+          <button id="floatingCartBtn" class="flex items-center space-x-2 px-4 py-2 border border-gray-300 rounded-md bg-gray-100 hover:bg-gray-200">
+    <svg class="w-5 h-5 text-gray-600" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+      <path stroke-linecap="round" stroke-linejoin="round"
+            d="M3 3h2l.4 2M7 13h14l-1.35 6.7a1 1 0 01-.98.8H6.33a1 1 0 01-.98-.8L4 6H2" />
+    </svg>
+    <span class="text-sm font-medium text-gray-800">My Cart</span>
+    <span id="cartCount" class="ml-1 text-sm text-green-700 font-semibold">(0)</span>
+  </button>
         </div>
 
         <!-- Mobile Menu Toggle -->
@@ -76,13 +76,13 @@
         />
         <a href="login.html" class="text-sm font-medium text-gray-700 hover:text-green-600">Login</a>
         <button class="flex items-center space-x-2 px-4 py-2 border border-gray-300 rounded-md bg-gray-100 hover:bg-gray-200">
-          <svg class="w-5 h-5 text-gray-600" fill="none" stroke="currentColor" stroke-width="2"
-               viewBox="0 0 24 24">
-            <path stroke-linecap="round" stroke-linejoin="round"
-                  d="M3 3h2l.4 2M7 13h14l-1.35 6.7a1 1 0 01-.98.8H6.33a1 1 0 01-.98-.8L4 6H2" />
-          </svg>
-          <span class="text-sm font-medium text-gray-800">My Cart</span>
-        </button>
+        <svg class="w-5 h-5 text-gray-600" fill="none" stroke="currentColor" stroke-width="2"
+             viewBox="0 0 24 24">
+          <path stroke-linecap="round" stroke-linejoin="round"
+                d="M3 3h2l.4 2M7 13h14l-1.35 6.7a1 1 0 01-.98.8H6.33a1 1 0 01-.98-.8L4 6H2" />
+        </svg>
+        <span class="text-sm font-medium text-gray-800">My Cart</span>
+      </button>
       </div>
     </div>
   </nav>
@@ -211,9 +211,9 @@
 </div>
 
 <!-- Floating Cart Icon -->
-  <button id="floatingCartBtn" class="fixed bottom-6 right-6 bg-green-600 text-white p-4 rounded-full shadow-lg z-50 flex items-center gap-3">
+  <!-- <button id="floatingCartBtn" class="fixed bottom-6 right-6 bg-green-600 text-white p-4 rounded-full shadow-lg z-50 flex items-center gap-3">
     🛒 <span id="cartCount" class="font-bold">0</span>
-  </button>
+  </button> -->
 
   
   <!-- Cart Modal -->
