--- a/index.html
+++ b/index.html
@@ -7,101 +7,107 @@
   <link rel="stylesheet" href="index.css">
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
   <script src="https://cdn.tailwindcss.com"></script>
+  <script src="index.js"></script>
 </head>
 
 <body class="bg-white text-gray-800">
 
-  <!-- Navbar -->
-  <nav class="bg-white shadow-md sticky top-0 z-50">
-    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-      <div class="flex justify-between items-center py-4">
-        
-        <!-- Logo & Location -->
-        <div class="flex items-center space-x-10">
-          <img src="images/blinkit-logo_casestudy - Copy.webp" alt="blinkit" class="h-12 w-auto">
-          <div class="hidden sm:block text-sm cursor-pointer" id="open-location-modal">
-            <div class="font-semibold text-green-700 hover:underline">Delivery in 11 minutes</div>
-            <div class="text-xs text-gray-600">Bhubaneswar, Odisha, India</div>
-          </div>
-        </div>
+ <!-- Navbar -->
+<nav class="bg-white shadow-md sticky top-0 z-50">
+  <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+    <div class="flex justify-between items-center py-4">
 
-        <!-- Search Bar (Desktop only) -->
-        <div class="flex-1 mx-4 hidden md:block">
-          <div class="relative">
-            <input
-              type="text"
-              placeholder='Search "bread"'
-              class="w-full px-4 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-green-500"
-            />
-            <svg class="absolute right-3 top-2.5 h-5 w-5 text-gray-400" fill="none" stroke="currentColor" stroke-width="2"
-                 viewBox="0 0 24 24">
-              <path stroke-linecap="round" stroke-linejoin="round"
-                    d="M21 21l-4.35-4.35m0 0a7.5 7.5 0 10-10.607-10.607 7.5 7.5 0 0010.607 10.607z" />
-            </svg>
-          </div>
-        </div>
-
-        <!-- Desktop Links -->
-        <div class="hidden md:flex items-center space-x-6">
-          <a href="Login.html" class="text-sm font-medium text-gray-700 hover:text-green-600">Login</a>
-          <button class="open-cart-btn flex items-center space-x-2 px-4 py-2 border border-gray-300 rounded-md bg-gray-100 hover:bg-gray-200">
-            <svg class="w-5 h-5 text-gray-600" fill="none" stroke="currentColor" stroke-width="2"
-                 viewBox="0 0 24 24">
-              <path stroke-linecap="round" stroke-linejoin="round"
-                    d="M3 3h2l.4 2M7 13h14l-1.35 6.7a1 1 0 01-.98.8H6.33a1 1 0 01-.98-.8L4 6H2" />
-            </svg>
-            <span class="text-sm font-medium text-gray-800">My Cart</span>
-          </button>
-        </div>
-
-        <!-- Mobile Menu Toggle -->
-        <div class="md:hidden flex items-center">
-          <button id="menu-toggle" class="text-gray-700 focus:outline-none">
-            <svg class="w-6 h-6" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
-              <path stroke-linecap="round" stroke-linejoin="round"
-                    d="M4 6h16M4 12h16M4 18h16"/>
-            </svg>
-          </button>
+      <!-- Logo & Location -->
+      <div class="flex items-center space-x-10">
+        <img src="images/blinkit-logo_casestudy - Copy.webp" alt="blinkit" class="h-12 w-auto">
+        <div class="hidden sm:block text-sm cursor-pointer" id="open-location-modal">
+          <div class="font-semibold text-green-700 hover:underline">Delivery in 11 minutes</div>
+          <div class="text-xs text-gray-600">Bhubaneswar, Odisha, India</div>
         </div>
       </div>
 
-      <!-- Mobile Menu -->
-      <div id="mobile-menu" class="md:hidden hidden flex-col space-y-4 pb-4">
-        <div class="text-sm">
-          <div class="font-semibold">Delivery in 11 minutes</div>
-          <div class="text-xs text-gray-600">Bhubaneswar, Odisha, India</div>
-        </div>
-        <input
-          type="text"
-          placeholder='Search "bread"'
-          class="w-full px-4 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-green-500"
-        />
-        <a href="login.html" class="text-sm font-medium text-gray-700 hover:text-green-600">Login</a>
-        <button class="flex items-center space-x-2 px-4 py-2 border border-gray-300 rounded-md bg-gray-100 hover:bg-gray-200">
-          <svg class="w-5 h-5 text-gray-600" fill="none" stroke="currentColor" stroke-width="2"
+      <!-- Search Bar (Desktop only) -->
+      <div class="flex-1 mx-4 hidden md:block">
+        <div class="relative">
+          <input
+            type="text"
+            placeholder='Search "bread"'
+            class="w-full px-4 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-green-500"
+          />
+          <svg class="absolute right-3 top-2.5 h-5 w-5 text-gray-400" fill="none" stroke="currentColor" stroke-width="2"
                viewBox="0 0 24 24">
             <path stroke-linecap="round" stroke-linejoin="round"
-                  d="M3 3h2l.4 2M7 13h14l-1.35 6.7a1 1 0 01-.98.8H6.33a1 1 0 01-.98-.8L4 6H2" />
+                  d="M21 21l-4.35-4.35m0 0a7.5 7.5 0 10-10.607-10.607 7.5 7.5 0 0010.607 10.607z" />
           </svg>
-          <span class="text-sm font-medium text-gray-800">My Cart</span>
+        </div>
+      </div>
+
+      <!-- Desktop Links -->
+    <div class="hidden md:flex items-center space-x-6" id="navRight">
+      <!-- This will be filled dynamically -->
+       <div id="authOptions"></div>
+
+       <!-- My Cart button (always shown) -->
+       <button id="floatingCartBtn" class="flex items-center space-x-2 px-4 py-2 border border-gray-300 rounded-md bg-gray-100 hover:bg-gray-200">
+         <svg class="w-5 h-5 text-gray-600" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+           <path stroke-linecap="round" stroke-linejoin="round"
+            d="M3 3h2l.4 2M7 13h14l-1.35 6.7a1 1 0 01-.98.8H6.33a1 1 0 01-.98-.8L4 6H2" />
+         </svg>
+         <span class="text-sm font-medium text-gray-800">My Cart</span>
+         <span id="cartCount" class="ml-1 text-sm text-green-700 font-semibold">(0)</span>
+       </button>
+    </div>
+
+
+      <!-- Mobile Menu Toggle -->
+      <div class="md:hidden flex items-center">
+        <button id="menu-toggle" class="text-gray-700 focus:outline-none">
+          <svg class="w-6 h-6" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round"
+                  d="M4 6h16M4 12h16M4 18h16"/>
+          </svg>
         </button>
       </div>
     </div>
-  </nav>
 
-  <!-- Location Modal -->
-  <div id="location-modal" class="fixed inset-0 bg-black bg-opacity-30 flex items-center justify-center hidden z-50">
-    <div class="bg-white p-6 rounded-md shadow-xl w-full max-w-md relative">
-      <button id="close-location-modal" class="absolute top-3 right-3 text-gray-600 hover:text-black text-xl">&times;</button>
-      <h2 class="text-lg font-semibold mb-4">Change Location</h2>
-      <div class="flex items-center gap-4">
-        <button class="bg-green-700 text-white px-4 py-2 rounded-md hover:bg-green-800">Detect my location</button>
-        <span class="text-gray-400">OR</span>
-        <input type="text" placeholder="search delivery location"
-               class="flex-1 px-4 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-green-500" />
+    <!-- Mobile Menu -->
+    <div id="mobile-menu" class="md:hidden hidden flex-col space-y-4 pb-4">
+      <div class="text-sm">
+        <div class="font-semibold">Delivery in 11 minutes</div>
+        <div class="text-xs text-gray-600">Bhubaneswar, Odisha, India</div>
       </div>
+      <input
+        type="text"
+        placeholder='Search "bread"'
+        class="w-full px-4 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-green-500"
+      />
+      <a href="login.html" class="text-sm font-medium text-gray-700 hover:text-green-600">Login</a>
+      <button class="flex items-center space-x-2 px-4 py-2 border border-gray-300 rounded-md bg-gray-100 hover:bg-gray-200">
+        <svg class="w-5 h-5 text-gray-600" fill="none" stroke="currentColor" stroke-width="2"
+             viewBox="0 0 24 24">
+          <path stroke-linecap="round" stroke-linejoin="round"
+                d="M3 3h2l.4 2M7 13h14l-1.35 6.7a1 1 0 01-.98.8H6.33a1 1 0 01-.98-.8L4 6H2" />
+        </svg>
+        <span class="text-sm font-medium text-gray-800">My Cart</span>
+      </button>
     </div>
   </div>
+</nav>
+
+<!-- Location Modal -->
+<div id="location-modal" class="fixed inset-0 bg-black bg-opacity-30 flex items-center justify-center hidden z-50">
+  <div class="bg-white p-6 rounded-md shadow-xl w-full max-w-md relative">
+    <button id="close-location-modal" class="absolute top-3 right-3 text-gray-600 hover:text-black text-xl">&times;</button>
+    <h2 class="text-lg font-semibold mb-4">Change Location</h2>
+    <div class="flex items-center gap-4">
+      <button class="bg-green-700 text-white px-4 py-2 rounded-md hover:bg-green-800">Detect my location</button>
+      <span class="text-gray-400">OR</span>
+      <input type="text" placeholder="search delivery location"
+             class="flex-1 px-4 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-green-500" />
+    </div>
+  </div>
+</div>
+
 
  
 
@@ -208,9 +214,9 @@
 <body class="bg-white text-gray-900 relative">
 
   <!-- Floating Cart Icon -->
-  <button id="floatingCartBtn" class="fixed bottom-6 right-6 bg-green-600 text-white p-4 rounded-full shadow-lg z-50 flex items-center gap-3">
+  <!-- <button id="floatingCartBtn" class="fixed bottom-6 right-6 bg-green-600 text-white p-4 rounded-full shadow-lg z-50 flex items-center gap-3">
     🛒 <span id="cartCount" class="font-bold">0</span>
-  </button>
+  </button> -->
 
   
   <!-- Cart Modal -->
@@ -261,10 +267,12 @@
 
     <!-- Checkout Button -->
     <a href="address.html">
-      <button id="checkoutBtn" class="mt-6 w-full bg-green-600 text-white py-3 rounded-md text-lg font-medium hidden">
+      <button id="checkoutBtn" onclick="placeOrder()" class="mt-6 w-full bg-green-600 text-white py-3 rounded-md text-lg font-medium hidden">
         Checkout
       </button>
+
     </a>
+
 
     <!-- Cancellation Policy -->
     <div class="bg-gray-100 rounded-lg p-4 text-sm text-gray-700 mt-6">
@@ -710,6 +718,40 @@
  <div class="fixed bottom-6 left-1/2 transform -translate-x-1/2 bg-green-600 text-white text-sm font-medium px-6 py-3 rounded-md shadow-lg z-50 hidden" id="toast">
     Item added to the cart successfully
   </div>
+
+  <!-- Profile Popup -->
+<div id="profileModal" class="fixed inset-0 bg-black bg-opacity-50 hidden z-50 flex items-center justify-center">
+  <div class="bg-white rounded-lg w-[90%] max-w-md p-6 relative">
+    <!-- Close Button -->
+    <button onclick="toggleProfile()" class="absolute top-2 right-2 text-gray-500 hover:text-red-500 text-xl">×</button>
+
+    <h2 class="text-xl font-semibold mb-4 text-gray-700">My Profile</h2>
+    
+    <div class="space-y-3">
+      <div>
+        <label class="text-sm text-gray-600">Name</label>
+        <p class="text-gray-800 font-medium" id="profileName">Loading...</p>
+      </div>
+      <div>
+        <label class="text-sm text-gray-600">Mobile Number</label>
+        <p class="text-gray-800 font-medium" id="profileMobile">Loading...</p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Logout Confirmation Modal -->
+<div id="logoutModal" class="fixed inset-0 bg-black bg-opacity-40 flex items-center justify-center z-50 hidden">
+  <div class="bg-white rounded-lg shadow-lg p-6 w-[90%] max-w-sm text-center">
+    <h2 class="text-lg font-semibold text-gray-800 mb-4">Log Out?</h2>
+    <p class="text-sm text-gray-600 mb-6">Are you sure you want to log out?</p>
+    <div class="flex justify-center gap-4">
+      <button onclick="confirmLogout()" class="bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600 text-sm">Yes</button>
+      <button onclick="closeLogoutModal()" class="bg-gray-200 text-gray-700 px-4 py-2 rounded hover:bg-gray-300 text-sm">Cancel</button>
+    </div>
+  </div>
+</div>
+
 
   <!-- Scripts -->
   <script src="navbar.js"></script>
