--- a/my-order.html
+++ b/my-order.html
@@ -32,7 +32,7 @@
   // ✅ Redirect if user is not logged in
   const user = localStorage.getItem("loggedInUser");
   if (!user) {
-    window.location.href = "login.html";
+    window.location.href = "Login.html";
   }
 
   function loadOrders() {
