--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         placeholder='Search "bread"'
         class="w-full px-4 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-green-500"
       />
-      <a href="login.html" class="text-sm font-medium text-gray-700 hover:text-green-600">Login</a>
+      <a href="Login.html" class="text-sm font-medium text-gray-700 hover:text-green-600">Login</a>
       <button class="flex items-center space-x-2 px-4 py-2 border border-gray-300 rounded-md bg-gray-100 hover:bg-gray-200">
         <svg class="w-5 h-5 text-gray-600" fill="none" stroke="currentColor" stroke-width="2"
              viewBox="0 0 24 24">
